--- a/view/detail.html
+++ b/view/detail.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./asset/img/icon.png" type="image/x-icon">
+    <title>Shoes Shop</title>
     <link rel="stylesheet" href="/asset/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,7 +93,7 @@
                                 <button class="cart-btn bg-transparent" onclick=""><i
                                         class="icon fas fa-shopping-cart"></i></button>
                                 <div class="cart-info" id="cart-info">
-                                    <span class="cart-item-count"></span> 
+                                    <span class="cart-item-count"></span>
                                     <div class="cart-items-container" id="cart-items-container"></div>
                                 </div>
                             </a>
@@ -132,38 +133,38 @@
         <div class="detail-product-right">
             <div class="detail-product-right-wrap">
                 <div class="detail-product-right-top">
-                    
-                        <div class="detail-product-right-top-description">
-                            <div class="detail-product-right-top-description-new"><span>Mới</span></div>
-                            <h2 class="title">
 
-                            </h2>
-                            <br>
-                            <span class="price"></span>
-                            <input type="hidden" name="id" value="">
-                            <div class="detail-product-right-top-description-size">
-                                <div class="detail-product-right-top-description-size-title">
-                                    <span>Kích thước: </span>
-                                </div>
-                                <div class="size-buttons mb-3">
-                                    <div class="size-buttons">
-                                        <button class="size-button" onclick="selectSize(36)"><span>36</span></button>
-                                        <button class="size-button" onclick="selectSize(37)"><span>37</span></button>
-                                        <button class="size-button" onclick="selectSize(38)"><span>38</span></button>
-                                        <button class="size-button" onclick="selectSize(39)"><span>39</span></button>
-                                        <button class="size-button" onclick="selectSize(40)"><span>40</span></button>
-                                        <button class="size-button" onclick="selectSize(41)"><span>41</span></button>
-                                        <button class="size-button" onclick="selectSize(42)"><span>42</span></button>
-                                    </div>
+                    <div class="detail-product-right-top-description">
+                        <div class="detail-product-right-top-description-new"><span>Mới</span></div>
+                        <h2 class="title">
 
-                                </div>
+                        </h2>
+                        <br>
+                        <span class="price"></span>
+                        <input type="hidden" name="id" value="">
+                        <div class="detail-product-right-top-description-size">
+                            <div class="detail-product-right-top-description-size-title">
+                                <span>Kích thước: </span>
                             </div>
-                            <div class="detail-product-right-top-btn">
-                                <button id="btnAddToCart" onclick="">Thêm vào giỏ hàng</button>
-                                <button>Mua Hàng</button>
+                            <div class="size-buttons mb-3">
+                                <div class="size-buttons">
+                                    <button class="size-button" onclick="selectSize(36)"><span>36</span></button>
+                                    <button class="size-button" onclick="selectSize(37)"><span>37</span></button>
+                                    <button class="size-button" onclick="selectSize(38)"><span>38</span></button>
+                                    <button class="size-button" onclick="selectSize(39)"><span>39</span></button>
+                                    <button class="size-button" onclick="selectSize(40)"><span>40</span></button>
+                                    <button class="size-button" onclick="selectSize(41)"><span>41</span></button>
+                                    <button class="size-button" onclick="selectSize(42)"><span>42</span></button>
+                                </div>
+
                             </div>
                         </div>
-                    
+                        <div class="detail-product-right-top-btn">
+                            <button id="btnAddToCart" onclick="">Thêm vào giỏ hàng</button>
+                            <button>Mua Hàng</button>
+                        </div>
+                    </div>
+
                     <div class="detail-product-right-bottom">
                         <div class="detail-product-right-bottom-title">
                             <h3 class="detail-product-right-bottom-title-description">Mô tả sản phẩm</h3>
