--- a/view/signUp.html
+++ b/view/signUp.html
@@ -380,8 +380,8 @@
     ></script>
     <script src="https://unpkg.com/axios@1.4.0/dist/axios.min.js"></script>
 
-    <script src="../controller/NewUsers.js"></script>
-    <script src="../controller/signUpApi.js"></script>
+    <script src="../model/NewUser.js"></script>
+    <script src="../controller/SignUpUsers.js"></script>
     <!-- <script src="../controller/main.js"></script> -->
   </body>
 </html>
