--- a/view/signIn.html
+++ b/view/signIn.html
@@ -350,8 +350,8 @@
     ></script>
     <script src="https://unpkg.com/axios@1.4.0/dist/axios.min.js"></script>
 
-    <script src="../controller/NewUsers.js"></script>
-    <script src="../controller/signInApi.js"></script>
+    <script src="../model/NewUser.js"></script>
+    <script src="../controller/SignInUsers.js"></script>
     <!-- <script src="../controller/main.js"></script> -->
   </body>
 </html>
