--- a/view/signUp.html
+++ b/view/signUp.html
@@ -155,7 +155,7 @@
           <div class="form-group">
             <input
               type="email"
-              class="form-control"
+              class="form-control width-form-sign"
               id="signUpEmail"
               aria-describedby="emailHelp"
               placeholder="<EMAIL>"
@@ -165,7 +165,7 @@
           <div class="form-group">
             <input
               type="password"
-              class="form-control"
+              class="form-control width-form-sign"
               id="signUpPass"
               placeholder="<PASSWORD>"
                 required
@@ -174,7 +174,7 @@
           <div class="form-group">
             <input
               type="text"
-              class="form-control"
+              class="form-control width-form-sign"
               id="signUpName"
               placeholder="<NAME>"
                 required
@@ -193,14 +193,14 @@
           <div class="form-group">
             <input
               type="tel"
-              class="form-control"
+              class="form-control width-form-sign"
               id="signUpPhoneNumber"
               placeholder="<PHONE NUMBER>"
                 required
             />
           </div>
-          <button onclick="signUpUser()" type="button" class="btn btn-primary btn-sign-up">
-            Sign Up
+          <button onclick="signUpUser()" type="button" class="btn btn-primary btn-sign">
+            SIGN UP
           </button>
         </form>
       </div>
