--- a/view/signIn.html
+++ b/view/signIn.html
@@ -156,7 +156,7 @@
             <div class="form-group">
               <input
                 type="email"
-                class="form-control"
+                class="form-control width-form-sign"
                 id="signInEmail"
                 placeholder="<YOUR EMAIL>"
               />
@@ -164,14 +164,14 @@
             <div class="form-group">
               <input
                 type="password"
-                class="form-control"
+                class="form-control width-form-sign"
                 id="signInPass"
                 placeholder="<YOUR PASSWORD>"
               />
             </div>
-            <button onclick="signInUser()" type="button" class="btn btn-primary btn-sign-in" >Sign in</button>
+            <button onclick="signInUser()" type="button" class="btn btn-primary btn-sign" >SIGN IN</button>
             <div class="sign-up">
-                <a href="./signup.html">Sign up</a>
+                <a href="./signup.html">SIGN UP</a>
             </div>
           </form>
       </div>
