--- a/view/cart.html
+++ b/view/cart.html
@@ -90,7 +90,7 @@
                                 <i class="icon fa-solid fa-magnifying-glass"></i>
                             </a>
                             <a class="header-action-item" href="">
-                                <button class="cart-btn bg-transparent" onclick="toggleSidebar()"><i
+                                <button class="cart-btn bg-transparent" onclick=""><i
                                         class="icon fas fa-shopping-cart"></i></button>
                                 <div class="cart-info" id="cart-info">
                                     <span class="cart-item-count"></span>
