--- a/view/signIn.html
+++ b/view/signIn.html
@@ -38,7 +38,7 @@
                       <div class="header-top-content d-flex justify-content-end">
                           <a href="./signup.html" id="loginLink" class="login text-white">
                               <i class="fa-solid fa-user"></i>
-                              <span>Sign Up</span>
+                              <span id="signInText">Sign Up</span>
                           </a>
                       </div>
                       <div class="currency-wrapper">
