--- a/view/signIn.html
+++ b/view/signIn.html
@@ -171,7 +171,8 @@
             </div>
             <button onclick="signInUser()" type="button" class="btn btn-primary btn-sign" >SIGN IN</button>
             <div class="sign-up">
-                <a href="./signup.html">SIGN UP</a>
+                <span>Nếu bạn chưa có tài khoản thì ==></span>
+                <a href="/view/signUp.html">SIGN UP</a>
             </div>
           </form>
       </div>
