--- a/view/signIn.html
+++ b/view/signIn.html
@@ -36,7 +36,7 @@
               <div class="col-lg-3">
                   <div class="header-top-wrapper mx-auto">
                       <div class="header-top-content d-flex justify-content-end">
-                          <a href="./signup.html" id="loginLink" class="login text-white">
+                          <a href="/view/signUp.html" id="loginLink" class="login text-white">
                               <i class="fa-solid fa-user"></i>
                               <span id="signInText">Sign Up</span>
                           </a>
