--- a/view/signUp.html
+++ b/view/signUp.html
@@ -36,7 +36,7 @@
           <div class="col-lg-3">
             <div class="header-top-wrapper mx-auto">
               <div class="header-top-content d-flex justify-content-end">
-                <a href="./signin.html" class="login text-white">
+                <a href="/view/signIn.html" class="login text-white">
                   <i class="fa-solid fa-user"></i>
                   <span>Sign In</span>
                 </a>
