--- a/view/product.html
+++ b/view/product.html
@@ -33,9 +33,9 @@
                             <a class="mr-3" href="https://www.pinterest.com/"><i class="fa-brands fa-instagram"></i></a>
                         </div>
                         <div class="header-top-content d-flex justify-content-end">
-                            <a href="" class="login text-white">
+                            <a href="/view/signIn.html" class="login text-white">
                                 <i class="fa-solid fa-user"></i>
-                                <span>Login</span>
+                                <span>SIGN IN</span>
                             </a>
                         </div>
                         <div class="currency-wrapper">
