--- a/view/cart.html
+++ b/view/cart.html
@@ -27,9 +27,9 @@
                 <div class="col-lg-3">
                     <div class="header-top-wrapper mx-auto">
                         <div class="header-top-content d-flex justify-content-end">
-                            <a href="" class="login text-white">
+                            <a href="/view/signIn.html" class="login text-white">
                                 <i class="fa-solid fa-user"></i>
-                                <span>Login</span>
+                                <span>SIGN IN</span>
                             </a>
                         </div>
                         <div class="currency-wrapper">
