--- a/view/signUp.html
+++ b/view/signUp.html
@@ -38,7 +38,7 @@
               <div class="header-top-content d-flex justify-content-end">
                 <a href="/view/signIn.html" class="login text-white">
                   <i class="fa-solid fa-user"></i>
-                  <span>Sign In</span>
+                  <span>SIGN IN</span>
                 </a>
               </div>
               <div class="currency-wrapper"></div>
