--- a/view/signIn.html
+++ b/view/signIn.html
@@ -158,7 +158,7 @@
                 type="email"
                 class="form-control width-form-sign"
                 id="signInEmail"
-                placeholder="<YOUR EMAIL>"
+                placeholder="YOUR EMAIL"
               />
             </div>
             <div class="form-group">
@@ -166,12 +166,12 @@
                 type="password"
                 class="form-control width-form-sign"
                 id="signInPass"
-                placeholder="<YOUR PASSWORD>"
+                placeholder="YOUR PASSWORD"
               />
             </div>
             <button onclick="signInUser()" type="button" class="btn btn-primary btn-sign" >SIGN IN</button>
             <div class="sign-up">
-                <a href="./signup.html">SIGN UP</a>
+                <a href="./signUp.html">SIGN UP</a>
             </div>
           </form>
       </div>
